Attacks wrapping fix

--- a/src/styles/actor/npc/data/_attacks.scss
+++ b/src/styles/actor/npc/data/_attacks.scss
@@ -1,9 +1,6 @@
 #npc__attacks {
     .item-list {
-        --gap: 1em;
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(24ch, 1fr));
-        column-gap: var(--gap);
+        column-gap: 0.5em;
 
         .item {
             &__body {
